# NaiveBayessSpamFilter

./: CMakeLists.txt  TextSplitter.cpp  main.cpp  test_TextSplitter.cpp
src/: NaiveBayesSpamFilter.h  NaiveBayessSpamFilter.cpp  TextSplitter.cpp  TextSplitter.h  test_NaiveBayessSpamFilter.cpp  test_TextSplitter.cpp
